# buildarr

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  test.Dockerfile  tox.ini
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: pre-commit.yml  release.yml  test.yml
buildarr/: __init__.py  exceptions.py  logging.py  secrets.py  state.py  trash.py  types.py  util.py
buildarr/cli/: __init__.py  compose.py  daemon.py  exceptions.py  main.py  run.py  test_config.py
buildarr/config/: __init__.py  base.py  buildarr.py  exceptions.py  load.py  models.py  post_init_render.py  render_instance_configs.py  resolve_instance_dependencies.py  types.py  util.py
buildarr/manager/: __init__.py  exceptions.py
buildarr/plugins/: __init__.py  context.py  load.py  models.py  types.py
buildarr/plugins/dummy/: api.py  cli.py  exceptions.py  manager.py  plugin.py  secrets.py  server.py  types.py  util.py
buildarr/plugins/dummy/config/: __init__.py  settings.py  types.py
buildarr/plugins/dummy2/: api.py  cli.py  exceptions.py  manager.py  plugin.py  secrets.py  types.py
buildarr/plugins/dummy2/config/: __init__.py  settings.py  types.py
buildarr/plugins/sonarr/: api.py  cli.py  exceptions.py  manager.py  plugin.py  secrets.py  types.py  util.py
buildarr/plugins/sonarr/config/: __init__.py  connect.py  general.py  import_lists.py  indexers.py  media_management.py  metadata.py  quality.py  tags.py  types.py  ui.py  util.py
buildarr/plugins/sonarr/config/download_clients/: __init__.py  download_clients.py  remote_path_mappings.py
buildarr/plugins/sonarr/config/profiles/: __init__.py  delay.py  language.py  quality.py  release.py
buildarr/secrets/: __init__.py  base.py  load.py  models.py
docs/: configuration.md  index.md  installation.md  plugins.md  release-notes.md  usage.md
docs/plugins/: index.md
docs/plugins/sonarr/: index.md
docs/plugins/sonarr/configuration/: connect.md  download-clients.md  general.md  host.md  import-lists.md  indexers.md  media-management.md  metadata.md  quality.md  tags.md  ui.md
docs/plugins/sonarr/configuration/profiles/: delay.md  language.md  quality.md  release.md
scripts/: bootstrap.sh
tests/functional/: conftest.py
tests/functional/cli/: test_run.py
tests/functional/cli/compose/: test_config.py  test_opts.py  test_plugins.py  util.py
tests/functional/cli/daemon/: test_config.py  test_daemon.py  test_opts.py  util.py
tests/functional/cli/dummy/: test_dump_config.py
tests/functional/cli/run/: test_config.py  test_opts.py  test_plugins.py  test_secrets.py
tests/functional/cli/test_config/: test_config.py  test_opts.py  test_plugins.py
tests/unit/config/base/: test_decode_attr.py  test_delete_remote.py  test_encode_attr.py  test_from_remote.py  test_get_create_remote_attrs.py  test_get_local_attrs.py  test_get_update_remote_attrs.py  test_log_delete_remote_attrs.py  test_model_dump_yaml.py  test_update_remote.py
tests/unit/config/base/from_remote/: test_nested_config.py
tests/unit/config/base/get_local_attrs/: test_decode_attr.py  test_decoder.py  test_is_field.py  test_optional.py  test_root_decoder.py
tests/unit/types/: test_baseenum.py  test_emailstr.py  test_localpath.py  test_lowercasenonemptystr.py  test_lowercasestr.py  test_model_config_base.py  test_nameemail.py  test_nonemptystr.py  test_password.py  test_port.py  test_pureposixpath.py  test_purewindowspath.py  test_rssurl.py  test_secretstr.py  test_trashid.py  test_uppercasenonemptystr.py  test_uppercasestr.py
