# pyproject.toml
# Python project configuration.

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "buildarr"
description = "Constructs and configures Arr PVR stacks"
readme = "README.md"
authors = [
    {name = "Callum Dickinson",  email = "callum.dickinson.nz@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
keywords = [
    "buildarr",
    "sonarr",
    "radarr",
    "prowlarr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "aenum",
    "click>=8.0.4",
    "click-params>=0.4.1",
    "importlib-metadata>=4.6.0",
    "pyyaml>=6.0",
    "pydantic[email]>=1.10.0,<2.0.0",
    "requests>=2.28.0",
    "schedule>=1.1.0",
    "stevedore>=4.0.0",
    "typing-extensions>=4.0.1",
    "watchdog>=3.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://buildarr.github.io"
Documentation = "https://buildarr.github.io"
Repository = "https://github.com/buildarr/buildarr"
Issues = "https://github.com/buildarr/buildarr/issues"
Changelog = "https://buildarr.github.io/release-notes"

[project.scripts]
buildarr = "buildarr.cli.main:main"

[project.entry-points."buildarr.plugins"]
dummy = "buildarr.plugins.dummy.plugin:DummyPlugin"

[tool.setuptools_scm]

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs==1.5.3",
    "mkdocstrings[python]==0.23.0",
]
lint = [
    "mypy==1.7.0",
    "ruff==0.3.0",
    "types-pyyaml==6.0.12.12",
    "types-requests==2.31.0.10",
]
test = [
    "flask==3.0.0",
    "werkzeug==3.0.1",
]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
output-format = "grouped"
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "E",
    "F",
    "G",
    "I",
    "INP",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "RUF",
    "S",
    "T10",
    "T20",
    "W",
    "YTT",
]
extend-select = ["COM812", "COM818", "UP009"]
extend-ignore = [
    "A003",
    "B023",
    "N805",
    "N806",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "RUF012",
]

[tool.ruff.lint.isort]
lines-between-types = 1
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"buildarr/cli/main.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
pretty = true
